# SDW_API

./: README.md  example.py  pyproject.toml  requirements.txt
sdw_api/: __init__.py  api_class.py
tests/: test_sdw_api.py
