[tool.poetry]
name = "SDW_API"
version = "0.1.2"
description = "Allows downloading data from the ECB's Statistical Data Warehouse (SDW)"
authors = ["Max <maximilian.schroder@bi.no>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MaximilianSchroeder/SDW_API"
repository = "https://github.com/MaximilianSchroeder/SDW_API"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
